Fixed top navigation spacing

--- a/style.css
+++ b/style.css
@@ -1173,7 +1173,7 @@ body.font-size-large,
 #top-navigation li {
 	display: inline-block;
 	font-size: 14px;
-	margin-left: 1em;
+	margin-left: 1.5em;
 }
 #top-navigation a {
 	color: #fff;
